--- a/wsc.html
+++ b/wsc.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>WebSocket Chat v2.1b</title>
+  <title>WebSocket Chat v2.1c</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -38,9 +38,9 @@
         <div class="input-group-btn">
           <button id="bS" class="btn btn-primary"><i class="glyphicon glyphicon-share"></i></button> &nbsp;
           <button id="bF" class="btn btn-success"><i class="glyphicon glyphicon-file"></i></button>
-          <button id="bH" class="btn btn-default" data-original-title="Hint" data-content="Utilisez SHIFT-Enter pour envoyer votre message." data-toggle="popover" data-placement="top">
+          <a tabIndex="0" id="bH" class="btn btn-default" role="button" data-trigger="focus" data-original-title="Hint" data-content="Utilisez SHIFT-Enter pour envoyer votre message." data-toggle="popover" data-placement="top">
             <span class="glyphicon glyphicon-info-sign"></span>
-          </button>
+          </a>
         </div>
       </div>
     </div>
@@ -124,7 +124,7 @@
       data = JSON.parse(evt.data);
       console.log(data);
       switch (data.type) {
-       case 'lnk' : $('#users').empty(); $('#users').append(data.message); break;
+       case 'lnk' : $('#count').text(data.count); $('#users').empty(); $('#users').append(data.message); break;
        case 'tlk' :
          var text = data.message;
          text = text.replace(/\r?\n/g, '<br />');
