--- a/wsc.html
+++ b/wsc.html
@@ -38,7 +38,7 @@
         <div class="input-group-btn">
           <button id="bS" class="btn btn-primary"><i class="glyphicon glyphicon-share"></i></button> &nbsp;
           <button id="bF" class="btn btn-success"><i class="glyphicon glyphicon-file"></i></button>
-          <a tabIndex="0" id="bH" class="btn btn-default" role="button" data-trigger="focus" data-original-title="Hint" data-content="Utilisez SHIFT-Enter pour envoyer votre message." data-toggle="popover" data-placement="top">
+          <a tabIndex="0" id="bH" class="btn btn-default" role="button" data-trigger="focus" data-original-title="Hint" data-content="<ul><li>Utilisez SHIFT-Enter pour envoyer votre message.</li> <li>Clic ici<a href='#'><span class='glyphicon glyphicon-user'></a></span></li></ul>" data-toggle="popover" data-placement="top">
             <span class="glyphicon glyphicon-info-sign"></span>
           </a>
         </div>
@@ -239,13 +239,13 @@
 
   $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip();
-    $('[data-toggle="popover"]').popover();
+  $('[data-toggle="popover"]').popover({html: true});
     $('#msgs').height($(window).height() - $('#name-div').height() - $('#input-div').height() - 10);
     $('#messages').height($(window).height() - $('#name-div').height() - $('#input-div').height() - 10);
     $('#message').width($('#input-div').width() - $('#bMsg').width() - 100);
     a1.play();
     fResize();
-    console.log('server 24');
+    console.log('server 25');
   });
 </script>
 </body>
