--- a/wsc.html
+++ b/wsc.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>WebSocket Chat v2.1c</title>
+  <title>WebSocket Chat v2.1d</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -38,7 +38,7 @@
         <div class="input-group-btn">
           <button id="bS" class="btn btn-primary"><i class="glyphicon glyphicon-share"></i></button> &nbsp;
           <button id="bF" class="btn btn-success"><i class="glyphicon glyphicon-file"></i></button>
-          <a tabIndex="0" id="bH" class="btn btn-default" role="button" data-trigger="focus" data-original-title="Hint" data-content="<ul><li>Utilisez SHIFT-Enter pour envoyer votre message.</li> <li>Clic ici &#160;<span id='bmodaleusers'><span class='glyphicon glyphicon-user'></span></span></li></ul>" data-toggle="popover" data-placement="top">
+          <a tabIndex="0" id="bH" class="btn btn-default" role="button" data-trigger="focus" data-original-title="Hint" data-content="<ul><li>Utilisez SHIFT-Enter pour envoyer votre message.</li> <li>Cliquer &#160;<span id='bmodaleusers' class='glyphicon glyphicon-user'></span>, pour voir les usagers connectés</li></ul>" data-toggle="popover" data-placement="top">
             <span class="glyphicon glyphicon-info-sign"></span>
           </a>
         </div>
@@ -245,14 +245,14 @@
   });
 
   $(document).ready(function(){
-    $('[data-toggle="tooltip"]').tooltip();
-  $('[data-toggle="popover"]').popover({html: true});
+    //$('[data-toggle="tooltip"]').tooltip();
+    $('[data-toggle="popover"]').popover({html: true});
     $('#msgs').height($(window).height() - $('#name-div').height() - $('#input-div').height() - 10);
     $('#messages').height($(window).height() - $('#name-div').height() - $('#input-div').height() - 10);
     $('#message').width($('#input-div').width() - $('#bMsg').width() - 100);
     a1.play();
     fResize();
-    console.log('server 25');
+    console.log('server 24');
   });
 </script>
 </body>
