--- a/wsc.html
+++ b/wsc.html
@@ -90,7 +90,7 @@
   </div>
   <div class="toast-body text-center">
     <div id ="firstline" style="cursor:default;">
-      <p class="mr-auto"><span id="usagersconnectes">Usagers connectés : </span><span id="count" class="label label-success">2</span></p>
+      <p class="mr-auto"><span id="usagersconnectes">Usagers connectés : </span><span id="count" class="label label-success"></span></p>
     </div>
     <hr class="style-two" style="height:1px; width:150px;margin-left:auto !important;margin-right:auto !important;">
       <ul class="listeusagers" id="users">
