--- a/wsc.html
+++ b/wsc.html
@@ -117,7 +117,7 @@
 <script>
   var a1 = new Audio('./consequence.mp3');
   var a2 = new Audio('./inbox.mp3');
-  //ws = new WebSocket("wss://www.salutem.co:1337/");
+  ws = new WebSocket("wss://www.salutem.co:1337/");
   var elem = document.getElementById('messages'); //pour scroll-auto
   
   const ico = document.getElementById('favicon');
