--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </div>
       <div class="col-sm-2  col-sm-offset-2">
         <div class="input-group">
-          <input type="text" class="input-sm" name="port" id="port" placeholder="Port" required />
+          <input type="number" class="input-sm" name="port" id="port" placeholder="Port" pattern="[0-9]{4}" required />
         </div>
       </div>
       <div class="col-sm-2">
         <div class="input-group">
-          <input type="text" class="input-sm" name="motsecret" id="motsecret" placeholder="Mot secret" required />
+          <input type="password" class="input-sm" name="motsecret" id="motsecret" placeholder="Mot secret" required />
         </div>
       </div>
       <div class="col-sm-1 text-right">
