--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.0/umd/popper.min.js"></script>
   <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"></script>
-  <script src="./index.js"></script>
+  <script defer src="./index.js"></script>
 </head>
 <body>
   <form>
