quelques corrections visuelles

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 <body>
   <form>
     <div id="name-div" class="row">
-      <div class="col-sm-5">
+      <div class="col-sm-5 col-lg-7">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
           <input type="text" class="input-sm" name="name" id="name" placeholder="Quel est votre pseudo/nickname" required />
         </div>
       </div>
-      <div class="col-sm-2  col-sm-offset-2">
+      <div class="col-sm-3 col-lg-2">
         <div class="input-group">
           <input type="number" class="input-sm" name="port" id="port" placeholder="Port" pattern="[0-9]{4}" required />
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-3 col-lg-2">
         <div class="input-group">
           <input type="password" class="input-sm" name="motsecret" id="motsecret" placeholder="Mot secret" required />
         </div>
@@ -104,7 +104,7 @@
   </div>
   <div class="toast-body text-center">
     <div id ="firstline" style="cursor:default;">
-      <p class="mr-auto"><span id="usagersconnectes">Usagers connectés : </span><span id="count" class="label label-success">2</span></p>
+      <p class="mr-auto"><span id="usagersconnectes">Usagers connectés : </span><span id="count" class="label label-success"></span></p>
     </div>
     <hr class="style-two" style="height:1px; width:150px;margin-left:auto !important;margin-right:auto !important;">
       <ul class="listeusagers" id="users">
