scrollbar dans la modale des usagers connectés :)

--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
       <p class="mr-auto"><span id="usagersconnectes">Usagers connectés : </span><span id="count" class="label label-success"></span></p>
     </div>
     <hr class="style-two" style="height:1px; width:150px;margin-left:auto !important;margin-right:auto !important;">
-      <ul class="listeusagers" id="users">
-      </ul>
+      <ul id="users"></ul>
     <br/>
   </div>
 </div>
