--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <link rel="manifest" href="./site.webmanifest">
   <link rel="stylesheet" type="text/css" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./style.css">
-  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.slim.min.js"></script>
+  <!--<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.slim.min.js"></script>-->
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.0/umd/popper.min.js"></script>
   <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"></script>
+  <script src="./e.dt.js"></script>
   <script defer src="./index.js"></script>
 </head>
 <body>
@@ -126,6 +128,8 @@
 </div>
 <!-- modal end -->
 <!-- </div> -->
+
+<div id="m_aye" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
 </body>
 </html>
