--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
           <input type="text" class="input-sm" name="name" id="name" placeholder="Quel est votre pseudo/nickname" required />
         </div>
       </div>
-      <div class="col-sm-3 col-lg-2">
-        <div class="input-group">
-          <input type="number" class="input-sm" name="room" id="room" placeholder="Room" pattern="[0-9]{4}" required />
-        </div>
-      </div>
-      <div class="col-sm-3 col-lg-2">
-        <div class="input-group">
-          <input type="password" class="input-sm" name="motsecret" id="motsecret" placeholder="Mot secret" required />
+      <div  id="divTwoInputs" class="col-sm-6 col-lg-4">
+        <div>
+          <div class="input-group">
+            <input type="number" class="input-sm" name="room" id="room" placeholder="Room" pattern="[0-9]{4}" required />
+          </div>
+          <div class="input-group">
+            <input type="password" class="input-sm" name="motsecret" id="motsecret" placeholder="Mot secret" required />
+          </div>
         </div>
       </div>
       <div class="col-sm-1 text-right">
