--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>wsc v2.4</title>
+  <title>wsc v2.5</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" id="favicon">
@@ -63,12 +63,13 @@
           <button id="bS" class="btn btn-primary"><i class="glyphicon glyphicon-share"></i></button> &nbsp;
           <button id="bF" class="btn btn-success"><i class="glyphicon glyphicon-file"></i></button>
           <a tabIndex="0" id="bH" class="btn btn-default" role="button" data-container="body" data-trigger="focus" data-original-title="<strong>Hint</strong>" 
-            data-content="<ul style='padding-left:10px;'><li>Utilisez <span class='racc'>SHIFT-Enter</span> pour envoyer votre message.</li> 
+            data-content="<ul style='padding-left:10px;'>
+              <li>Utilisez <span class='racc'>SHIFT-Enter</span> pour envoyer votre message.</li>
               <li>Cliquez &#160;<div id='bmodaleusers' class='glyphicon glyphicon-user'></div>, pour voir les usagers connectés</li>
-            <li>Pour partager du code dans le chat, vous pouvez tout simplement utiliser la balise html <code>&#60; pre> ... &#60; /pre></code>. <br/>
-              Attention, si vous utilisez cette balise, vous devrez faire <span class='racc'>CTRL-0</span> puis <span class='racc'>CTRL-9</span> 
-              quand vous aurez terminé d'écrire (juste avant d'envoyer votre message).
-            </li> </ul>" data-toggle="popover" data-placement="top">
+              <li>Pour partager du code dans le chat, vous pouvez tout simplement utiliser la balise html <code>&#60;pre> ... &#60;/pre></code>.</li>
+              <li>Utilisez <span class='racc'>CTRL-0</span> pour remplacer les &#60; par des & #60;</li>
+              <li>Utilisez <span class='racc'>CTRL-9</span> pour mettre le texte du msg dans un balise &#60;pre></li>
+              </ul>" data-toggle="popover" data-placement="top">
             <span class="glyphicon glyphicon-info-sign"></span>
           </a>
         </div>
