--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <li>Cliquez &#160;<div id='bmodaleusers' class='glyphicon glyphicon-user'></div>, pour voir les usagers connectés</li>
               <li>Pour partager du code dans le chat, vous pouvez tout simplement utiliser la balise html <code>&#60; pre> ... &#60; /pre></code>.</li>
               <li>Utilisez <span class='racc'>CTRL-0</span> pour remplacer les &#60; par des & #60;</li>
-              <li>Utilisez <span class='racc'>CTRL-9</span> pour mettre le texte du msg dans un balise &#60; pre></li>
+              <li>Utilisez <span class='racc'>CTRL-9</span> pour mettre le texte du msg dans une balise &#60; pre></li>
               </ul>" data-toggle="popover" data-placement="top">
             <span class="glyphicon glyphicon-info-sign"></span>
           </a>
