--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <input type="text" class="input-sm" name="name" id="name" placeholder="Quel est votre pseudo/nickname" required />
         </div>
       </div>
-      <div  id="divTwoInputs" class="col-sm-6 col-lg-4">
+      <div id="divTwoInputs" class="col-sm-6 col-lg-4">
         <div>
           <div class="input-group">
             <input type="number" class="input-sm" name="room" id="room" placeholder="Room" pattern="[0-9]{4}" required />
@@ -46,9 +46,17 @@
       <div id="divWelcome">
         <span id="arrow" class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
       </div>
+      <div id="divPrev">
         <div id="divRoom">
           <p><span>ROOM : </span><span id ="croom"></span></p>
         </div>
+        <div id="divGif">
+          <img src="./live.gif" height="23px" width="23px">
+        </div>
+        <div id="divMsgDeco">
+          <span>Déconnecté</span>
+        </div>
+      </div>
     </div>
     <div id="msgs">
       <ul id="messages" class="scrollbar">
