--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script defer src="./index.js"></script>
 </head>
 <body>
-  <div id="loading"></div>
+  <!--<div id="loading"></div>-->
   <form>
     <div id="name-div" class="row">
       <div class="col-sm-5 col-lg-7">
