--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <div id="divGif">
           <img src="./live.gif" height="23px" width="23px">
         </div>
-        <div id="divMsgDeco">
+        <!--<div id="divMsgDeco">
           <span>Déconnecté</span>
-        </div>
+        </div>-->
       </div>
     </div>
     <div id="msgs">
