--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>wsc v2.5.1</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"><!--
   <script src="https://cdn.jsdelivr.net/npm/pace-js@1.0.2/pace.min.js" integrity="sha256-wNhWj+b52Df2ZAAPGXPyIAnXdqq7Sb1tr2kpEoJfbig=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@1.0.2/themes/orange/pace-theme-mac-osx.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@1.0.2/themes/orange/pace-theme-mac-osx.css">-->
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" id="favicon">
   <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
