--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
         <div id="divRoom">
           <p><span>ROOM : </span><span id ="croom"></span></p>
         </div>
-        <div id="divGif">
-          <img src="./live.gif" height="23px" width="23px">
-        </div>
-        <!--<div id="divMsgDeco">
-          <span>Déconnecté</span>
-        </div>-->
+        <div id="divLive" class="">Déconnecté</div>
       </div>
     </div>
     <div id="msgs">
