--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="divRoom">
           <p><span>ROOM : </span><span id ="croom"></span></p>
         </div>
-        <div id="divLive" class="">Déconnecté</div>
+        <div id="divLive" class="liveDeco">Déconnecté</div>
       </div>
     </div>
     <div id="msgs">
