--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
         <span id="arrow" class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
       </div>
       <div id="divPrev">
-        <div id="divRoom">
-          <p><span>ROOM : </span><span id ="croom"></span></p>
-        </div>
-        <div id="divLive" class="liveDeco"></div>
+        <div id="divRoom"><p><span>ROOM : </span><span id ="croom"></span></p></div>
+        &nbsp;<div id="divLive" class="liveDeco"></div>
       </div>
     </div>
     <div id="msgs">
