--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="col-sm-1 text-right">
-        <button class="btn btn-sm btn-primary" id="bName"><i class="glyphicon glyphicon-ok"></i></button>
+        <button class="btn btn-sm btn-primary" id="bName" disabled><i class="glyphicon glyphicon-ok"></i></button>
       </div>
     </div>
     <div id="welcome">
