Test ajout voix

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       </div>
       <div id="divPrev">
         <div id="divRoom"><p><span>ROOM : </span><span id ="croom"></span></p></div>
+        &nbsp;<button id='bvoix' class='btn btn-sm' type='button'>VOCAL</button>
         &nbsp;<div id="divLive" class="liveDeco"></div>
       </div>
     </div>
@@ -133,6 +134,7 @@
 <!-- </div> -->
 
 <div id="m_aye" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div id="m_voix" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
 </body>
 </html>
