--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.0/umd/popper.min.js"></script>
   <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"></script>
   <script src="./e.dt.js"></script>
+  <script defer src="./voix.js"></script>
   <script defer src="./index.js"></script>
 </head>
 <body>
@@ -47,9 +48,34 @@
       <div id="divWelcome">
         <span id="arrow" class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
       </div>
+      <div id="divAudio">
+        <div id="divEmission">
+          <button id="bstart" class="btn" type="button">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-mic-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z"/>
+              <path fill-rule="evenodd" d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
+            </svg>
+          </button>
+          <button id="bstop" class="btn" type="button" disabled>
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-mic-mute-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M12.734 9.613A4.995 4.995 0 0 0 13 8V7a.5.5 0 0 0-1 0v1c0 .274-.027.54-.08.799l.814.814zm-2.522 1.72A4 4 0 0 1 4 8V7a.5.5 0 0 0-1 0v1a5 5 0 0 0 4.5 4.975V15h-3a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-3v-2.025a4.973 4.973 0 0 0 2.43-.923l-.718-.719zM11 7.88V3a3 3 0 0 0-5.842-.963L11 7.879zM5 6.12l4.486 4.486A3 3 0 0 1 5 8V6.121zm8.646 7.234l-12-12 .708-.708 12 12-.708.707z"/>
+            </svg>
+          </button>
+          <button id="bmuteRecord" class="btn" type="button" disabled>Mute</button>
+        </div>
+        <div id="divReception">
+          <p id="reception">RECEPTION</p>
+          <button id="bmuteAudio" class="btn" type="button">
+            <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-volume-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M8.717 3.55A.5.5 0 0 1 9 4v8a.5.5 0 0 1-.812.39L5.825 10.5H3.5A.5.5 0 0 1 3 10V6a.5.5 0 0 1 .5-.5h2.325l2.363-1.89a.5.5 0 0 1 .529-.06zM8 5.04L6.312 6.39A.5.5 0 0 1 6 6.5H4v3h2a.5.5 0 0 1 .312.11L8 10.96V5.04z"/>
+              <path d="M10.707 11.182A4.486 4.486 0 0 0 12.025 8a4.486 4.486 0 0 0-1.318-3.182L10 5.525A3.489 3.489 0 0 1 11.025 8c0 .966-.392 1.841-1.025 2.475l.707.707z"/>
+            </svg>
+          </button>
+        </div>
+        <audio id="audio" autoplay></audio>
+      </div>
       <div id="divPrev">
         <div id="divRoom"><p><span>ROOM : </span><span id ="croom"></span></p></div>
-        &nbsp;<button id='bvoix' class='btn btn-sm' type='button'>VOCAL</button>
         &nbsp;<div id="divLive" class="liveDeco"></div>
       </div>
     </div>
@@ -134,7 +160,6 @@
 <!-- </div> -->
 
 <div id="m_aye" class="modal" tabindex="-1" role="dialog" aria-hidden="true"></div>
-<div id="m_voix" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
 </body>
 </html>
