--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div id="welcome">
-      <div id="divWelcome">
+      <div id="divWelcome" class="hidden-xs">
         <span id="arrow" class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
       </div>
       <div id="divAudio">
