--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       </div>
     </div>
     <div id="welcome">
-      <div id="divWelcome" class="hidden-xs">
+      <div id="divWelcome" class="hidden-xs col-sm-4">
         <span id="arrow" class="glyphicon glyphicon-menu-right"></span> <span id="welcometext"></span>
       </div>
-      <div id="divAudio">
+      <div id="divAudio" class="col-xs-5 col-sm-4">
         <div id="divEmission">
           <button id="bstart" class="btn" type="button">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-mic-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -74,7 +74,7 @@
         </div>
         <audio id="audio" autoplay></audio>
       </div>
-      <div id="divPrev">
+      <div id="divPrev" class="col-xs-7 col-sm-4">
         <div id="divRoom"><p><span>ROOM : </span><span id ="croom"></span></p></div>
         &nbsp;<div id="divLive" class="liveDeco"></div>
       </div>
