--- a/index.html
+++ b/index.html
@@ -152,7 +152,17 @@
       <p><span id="usagersconnectes">Usagers connectés : </span><span id="count" class="label label-success"></span></p>
     </div>
     <hr class="style-two">
-      <ul id="users"></ul>
+    <ul id="users"></ul>
+    <div id="listeIcons">
+      <span id="icon1" data-toggle="tooltip" data-placement="bottom" title="Ça va">&#128077;</span>
+      <span id="icon2" data-toggle="tooltip" data-placement="bottom" title="Ça ne va pas">&#128078;</span>
+      <span id="icon3" data-toggle="tooltip" data-placement="bottom" title="Question">&#128587;&#8205;&#9794;&#65039;</span>
+      <span id="icon4" data-toggle="tooltip" data-placement="bottom" title="Bon rythme de cours">&#127891;</span>
+      <span id="icon5" data-toggle="tooltip" data-placement="bottom" title="Je veux tenter">&#9917;</span>
+      <span id="icon6" data-toggle="tooltip" data-placement="bottom" title="Oui">&#128994;</span>
+      <span id="icon7" data-toggle="tooltip" data-placement="bottom" title="Non">&#10060;</span>
+      <span id="icon8" data-toggle="tooltip" data-placement="bottom" title="Je veux parler!">&#128172;</span>
+    </div>
     <br/>
   </div>
 </div>
