--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>wsc v2.6.1</title>
+  <title>wsc v2.7</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"><!--
   <script src="https://cdn.jsdelivr.net/npm/pace-js@1.0.2/pace.min.js" integrity="sha256-wNhWj+b52Df2ZAAPGXPyIAnXdqq7Sb1tr2kpEoJfbig=" crossorigin="anonymous"></script>
@@ -19,6 +19,7 @@
   <script src="./e.dt.js"></script>
   <script defer src="./voix.js"></script>
   <script defer src="./index.js"></script>
+  <script defer scr="./g.icon.js"></script>
 </head>
 <body>
   <!--<div id="loading"></div>-->
