--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
     <hr class="style-two">
     <ul id="users"></ul>
     <div id="listeIcons">
-      <span id="icon1" data-toggle="tooltip" data-placement="bottom" title="Ça va">&#128077;</span>
-      <span id="icon2" data-toggle="tooltip" data-placement="bottom" title="Ça ne va pas">&#128078;</span>
-      <span id="icon3" data-toggle="tooltip" data-placement="bottom" title="Question">&#128587;&#8205;&#9794;&#65039;</span>
-      <span id="icon4" data-toggle="tooltip" data-placement="bottom" title="Bon rythme de cours">&#127891;</span>
-      <span id="icon5" data-toggle="tooltip" data-placement="bottom" title="Je veux tenter">&#9917;</span>
+      <button class="button-icon" id="icon1"><span data-toggle="tooltip" data-placement="bottom" title="Ça va">&#128077;</span></button>
+      <button class="button-icon" id="icon2"><span data-toggle="tooltip" data-placement="bottom" title="Ça ne va pas">&#128078;</span></button>
+      <button class="button-icon" id="icon3"><span data-toggle="tooltip" data-placement="bottom" title="Question">&#128587;&#8205;&#9794;&#65039;</span></button>
+      <button class="button-icon" id="icon4"><span data-toggle="tooltip" data-placement="bottom" title="Bon rythme de cours">&#127891;</span></button>
+      <button class="button-icon" id="icon5"><span data-toggle="tooltip" data-placement="bottom" title="Je veux tenter">&#9917;</span></button>
       <span id="icon6" data-toggle="tooltip" data-placement="bottom" title="Oui">&#128994;</span>
       <span id="icon7" data-toggle="tooltip" data-placement="bottom" title="Non">&#10060;</span>
       <span id="icon8" data-toggle="tooltip" data-placement="bottom" title="Je veux parler!">&#128172;</span>
