--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"></script>
   <script src="./e.dt.js"></script>
   <script defer src="./voix.js"></script>
-  <script defer scr="./g.icon.js"></script>
+  <script defer src="./g.icon.js"></script>
   <script defer src="./index.js"></script>
 </head>
 <body>
