--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
   <link rel="manifest" href="./site.webmanifest">
   <link rel="stylesheet" type="text/css" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="./wsc.css">
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.0/umd/popper.min.js"></script>
   <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"></script>
   <script src="./e.dt.js"></script>
-  <script defer src="./voix.js"></script>
+  <script defer src="./g.voix.js"></script>
   <script defer src="./g.icon.js"></script>
   <script defer src="./index.js"></script>
 </head>
 <body>
-  <!--<div id="loading"></div>-->
   <form>
     <div id="name-div" class="row">
       <div class="col-sm-5 col-lg-7">
@@ -77,7 +76,7 @@
       </div>
       <div id="divPrev" class="col-xs-7 col-sm-4">
         <div id="divRoom"><p><span>ROOM : </span><span id ="croom"></span></p></div>
-        &nbsp;<div id="divLive" class="liveDeco"></div>
+        &nbsp;<div class="live"></div>
       </div>
     </div>
     <div id="msgs">
